--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - npm ci
     build:
       commands:
-        - npx amplify-hosting-ci-build
+        - npm run build
   artifacts:
     baseDirectory: .next
     files:
