--- a/amplify.yml
+++ b/amplify.yml
@@ -6,22 +6,12 @@ frontend:
         - npm ci
     build:
       commands:
-        # 👇 construye tu aplicación Next.js (App Router)
         - npm run build
   artifacts:
-    # 👇 esta es la carpeta correcta para SSR (no .next)
+    # 👇 Amplify usa .next (no .next/standalone)
     baseDirectory: .next
     files:
       - '**/*'
   cache:
     paths:
       - node_modules/**/*
-  customHeaders:
-    - pattern: '**/*'
-      headers:
-        - key: 'Cache-Control'
-          value: 'no-cache'
-  # 👇 fuerza ejecución del servidor Next.js en Amplify
-  custom:
-    nextJsBuild:
-      enableSSR: true
