--- a/amplify.yml
+++ b/amplify.yml
@@ -6,12 +6,15 @@ frontend:
         - npm ci
     build:
       commands:
-        - npm run build
+        # 👇 construye tu aplicación como SSR
+        - npx next build
   artifacts:
-    # 👇 Amplify usa .next (no .next/standalone)
     baseDirectory: .next
     files:
       - '**/*'
   cache:
     paths:
       - node_modules/**/*
+  custom:
+    nextJsBuild:
+      enableSSR: true
